RESOLVED FIXED36271
CSS3 :enabled on an input type=hidden element fails
https://bugs.webkit.org/show_bug.cgi?id=36271
Summary CSS3 :enabled on an input type=hidden element fails
Simon Fraser (smfr)
Reported 2010-03-17 20:14:51 PDT
Attachments
Testcase (1.76 KB, text/html)
2010-03-17 20:14 PDT, Simon Fraser (smfr)
no flags
Patch (6.40 KB, patch)
2010-03-18 10:54 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2010-03-18 10:08:25 PDT
Simon Fraser (smfr)
Comment 2 2010-03-18 10:54:56 PDT
Dave Hyatt
Comment 3 2010-03-18 10:55:57 PDT
Comment on attachment 51050 [details] Patch r=me
Simon Fraser (smfr)
Comment 4 2010-03-18 10:58:20 PDT
Note You need to log in before you can comment on or make changes to this bug.